extend uncertainty estimates a bit

--- a/talk.tex
+++ b/talk.tex
@@ -168,7 +168,7 @@
   \end{center}
 \end{frame}
 
-\begin{frame}{EFT towers}
+\begin{frame}{EFT towers with low-scale SM}
   \resizebox{0.3\textwidth}{!}{%
     \begin{tikzpicture}
     % MSSM
@@ -239,7 +239,7 @@
   \end{tikzpicture}}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{EFT towers with low-scale 2HDM}
   \resizebox{0.3\textwidth}{!}{%
   \begin{tikzpicture}
     % MSSM
@@ -337,22 +337,24 @@
   fixed 2-loop order:
   \begin{itemize}
   \item scale variation (estimates $\log^n \frac{Q}{M}$ terms)
-  \item $y_t^{\text{FS}}$ vs.\ $y_t^{\text{SPheno}}$
+  \item 1L + 2L-QCD $y_t^{\text{SOFTSUSY/FS}}(M_Z)$ vs.\ $y_t^{\text{SPheno}}(M_Z)$
   \end{itemize}
   fixed 3-loop order:
   \begin{itemize}
   \item scale variation (estimates $\log^n \frac{Q}{M}$ terms)
-  \item ??
+  \item ? 2L-SQCD $y_t^{\text{SOFTSUSY/FS}}(M_Z)$ vs.\ $y_t^{\text{SPheno}}(M_Z)$
+  \item ? $\alpha_s^{1L}$ vs.\ $\alpha_s^{2L}$
   \end{itemize}
   pure EFT:
   \begin{itemize}
-  \item $Q_\text{match}$, $Q_\text{pole}$ scale variation
-  \item ??
+  \item vary $Q_\text{match}$ [SUSY uncertainty]
+  \item vary $Q_\text{pole}$ and $y_t^{2L}(M_Z)$ vs.\ $y_t^{3L}(M_Z)$ [SM uncertainty]
+  \item $\lambda$ vs.\ $(\lambda + v^2/\MS^2)$ [EFT uncertainty]
   \end{itemize}
   FlexibleEFTHiggs:
   \begin{itemize}
-  \item $Q_\text{match}$, $Q_\text{pole}$ scale variation
-  \item $y_t^{2L}(M_Z)$ vs.\ $y_t^{3L}(M_Z)$
+  \item vary $Q_\text{match}$ [SUSY uncertainty]
+  \item vary $Q_\text{pole}$ and $y_t^{2L}(M_Z)$ vs.\ $y_t^{3L}(M_Z)$ [SM uncertainty]
   \end{itemize}
 \end{frame}
 
