systematize loop corrections

--- a/talk.tex
+++ b/talk.tex
@@ -351,21 +351,18 @@
     \midrule
     $Q_\pole$ & $[\MS/2, 2\MS]$ & $[\MS/2, 2\MS]$ & $[\MS/2, 2\MS]$ \\
     $y_t(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & \textcolor{red}{2L vs.\ 3L} \\
-    $\alpha_s(M_Z)$ & 0L vs.\ 1L & 0L vs.\ 1L & 1L vs.\ 2L \\
+    $\alpha_s(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & \textcolor{red}{2L vs.\ 3L} \\
     \midrule
     EFT/mixed & $\Delta\lambda^{0L}$ & $\Delta\lambda^{1L}$ & $\Delta\lambda^{2L}$ \\
     \midrule
     $Q_\text{match}$ & $[\MS/2, 2\MS]$ & $[\MS/2, 2\MS]$ & $[\MS/2, 2\MS]$ \\
     $\lambda(\MS)$ & $0$ vs.\ $\frac{v^2}{\MS^2}$ & $0$ vs.\ $\frac{v^2}{\MS^2}$ & $0$ vs.\ $\frac{v^2}{\MS^2}$ \\
     \midrule
-    EFT/mixed & $\beta^{1L}$ & $\beta^{2L}$ & $\beta^{3L}$ \\
-    \midrule
-    $y_t(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & 2L vs.\ 3L \\
-    $\alpha_s(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & 2L vs.\ 3L \\
-    \midrule
-    EFT/mixed & $\Delta M_h^{1L}$ & $\Delta M_h^{2L}$ & $\Delta M_h^{3L}$ \\
+    EFT/mixed & $\Delta M_h^{1L}$, $\beta^{1L}$ & $\Delta M_h^{2L}$, $\beta^{2L}$ & $\Delta M_h^{3L}$, $\beta^{3L}$ \\
     \midrule
     $Q_\pole$ & $[M_t/2, 2M_t]$ & $[M_t/2, 2M_t]$ & $[M_t/2, 2M_t]$ \\
+    $y_t(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & 2L vs.\ 3L \\
+    $\alpha_s(M_Z)$ & 0L vs.\ 1L & 1L vs.\ 2L & 2L vs.\ 3L \\
     \bottomrule
   \end{tabular}
 \end{center}
