add reasonable as requirement

--- a/talk.tex
+++ b/talk.tex
@@ -322,6 +322,7 @@
 
 \begin{frame}{Requirements for uncertainty estimate}
   \begin{itemize}
+  \item reasonable
   \item code specific
   \item flag specific
   \item generic (MSSM, NMSSM, THDM, \ldots)
