make date more concrete

--- a/talk.tex
+++ b/talk.tex
@@ -132,7 +132,7 @@
 
 \author[Alexander Voigt]{Alexander Voigt}
 
-\date{Paris, October 2017}
+\date{Paris, 11.10.2017}
 
 \institute[Aachen]{RWTH Aachen}
 \subject{FlexibleSUSY,MSSM,Higgs,FlexibleEFTHiggs}
